<resources>
    <string name="app_name">Control Ticket App</string>
    <string name="home_fragment">Homepage</string>
    <string name="QR_fragment">QR fragment</string>
    <string name="lancer_un_scan">Scan ticket</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_ticket">Please enter ticket reference:</string>
    <string name="ticket_number">Ticket number</string>
    <string name="loading_message">Ticket in process… Please wait</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="goToTicketInput">Enter reference manually</string>
    <string name="titre_de_la_verification">Ticket check</string>
    <string name="selectionner_le_type_de_fraude">Select fraud type:</string>
    <string name="cr_ation_de_la_fraude">Fraud declaration</string>
    <string name="pageDeFraudeTitle">Fraud page</string>
    <string name="le_paiement_de_cette_fraude_est_de">Fraud price is : %s €</string>
    <string name="carte_bleu">credit card</string>
    <string name="paiement_en_cash">cash</string>
    <string name="paiement_diff_r">Delayed payment</string>
    <string name="passer_la_carte_dans_le_terminal">Please fill your credit card infos</string>
    <string name="je_confirme_que_le_paiement_de_la_somme_de_s_est_bien_effectu">I confirm that the %s € payment has been done</string>
    <string name="valider_informations">Validate informations</string>
    <string name="nom">Last Name</string>
    <string name="pr_nom">First Name</string>
    <string name="adresse_email">Email address</string>
    <string name="l_amende_est_de_s">The fine price is : %s €</string>
    <string name="le_mode_de_paiement_est_pris_en_compte">Payment method has been approved</string>
    <string name="fraude_en_cours_d_valuation">Fraud is currently being evaluated</string>
    <string name="retour_la_page_d_accueil">Return to homepage</string>
    <string name="adresse">Address</string>

    <string-array name="fraud_types">
        <item>reduced</item>
        <item>noticket</item>
    </string-array>
    <string name="retry">retry</string>
    <string name="voir_mes_stats">See my stats</string>
    <string name="cr_er_une_fraude">Declare a fraud</string>
    <string name="nombre_de_tickets_controll_s">Number of controlled tickets:</string>
    <string name="nombre_de_fraudes_d_clar_es">Number of frauds declared:</string>
    <string name="return_homepage">Return to homepage</string>
    <string name="none">NONE</string>
    <string name="stats_are_loading">Stats are loading</string>
    <string name="ok">Ok</string>
    <string name="probleme_de_connexion">"Conection issues, please try again"</string>
    <string name="logging_in">Logging in</string>
    <string name="billet_en_cours_de_traitement">Ticket processing</string>
    <string name="num_ro_de_carte_bleu">Credit card number</string>
    <string name="date_d_expiration">Expiration Date</string>
    <string name="code_secret">Secret code</string>
    <string name="declare_fraud">Declare fraud</string>
    <string name="mot_de_passe">password</string>
    <string name="login">login</string>
    <string name="check">Check</string>
    <string name="ticket_control_application">Ticket control Application</string>
</resources>
